typo: Indicies -> Indices

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4515,7 +4515,7 @@
         For example, specifying an invalid value for <code>aria-colindex</code> or setting it on some but not all cells in a row, could cause screen reader table reading functions to skip cells or simply stop functioning.
       </p>
       <section id="gridAndTableProperties_cols_contiguous">
-        <h4>Using <code>aria-colindex</code> When Column Indicies Are Contiguous</h4>
+        <h4>Using <code>aria-colindex</code> When Column Indices Are Contiguous</h4>
         <p>
           When all the cells in a row have column index numbers that are consecutive integers,
           <code>aria-colindex</code> can be set on the row element with a value equal to the index number of the first column in the set.
@@ -4556,7 +4556,7 @@
 </pre>
       </section>
       <section id="gridAndTableProperties_cols_noncontiguous">
-        <h4>Using <code>aria-colindex</code> When Column Indicies Are Not Contiguous</h4>
+        <h4>Using <code>aria-colindex</code> When Column Indices Are Not Contiguous</h4>
         <p>
           When the cells in a row have column index numbers that are not consecutive integers, <code>aria-colindex</code> needs to be set on each cell in the row.
           The following example shows a grid for an online grade book where the first two columns contain a student name and subsequent columns contain scores.
