Revise description of aria-label to clarify that the string is not visually rendered as opposed to the element being named.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3863,7 +3863,7 @@ However, most authors do not need detailed understanding of the algorithms since
         <section id="naming_with_aria-label">
           <h5>Naming with a String Attribute Via <code>aria-label</code></h5>
           <p>
-            The <a href="#aria-label" class="property-reference">aria-label</a> property enables authors to specify a string that will name an element without being rendered visually.
+            The <a href="#aria-label" class="property-reference">aria-label</a> property enables authors to name an element with a string that is not visually rendered.
             For example, the name of the following button is &quot;Close&quot;.
           </p>
           <pre><code>&lt;button type="button" aria-label="Close">X&lt;/button></code></pre>
