--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3919,7 +3919,7 @@ However, most authors do not need detailed understanding of the algorithms since
     <li><p>It has the highest precedence when browsers calculate accessible names, i.e., it overrides names from child content and all other naming attributes, including <code>aria-label</code>.</p></li>
     <li><p>It can concatenate content from multiple elements into a single name string.</p></li>
     <li>
-      <p>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with the HTML <code>hidden</code> attribute, or CSS <code>display: none</code> or <code>visibility: hidden</code> in the calculated name string.</p>
+      <p>It incorporates content from elements regardless of their visibility, i.e., it even includes content from elements with the HTML <code>hidden</code> attribute, CSS <code>display: none</code>, or CSS <code>visibility: hidden</code> in the calculated name string.</p>
       <pre><code>&lt;span id="night-mode-label" hidden>Night mode&lt;/span>
   &lt;input type="checkbox" role="switch" aria-labelledby="night-mode-label"></code></pre>
     </li>
