Change 'necessity' tto 'necessary' in table column description

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4140,7 +4140,7 @@ However, most authors do not need detailed understanding of the algorithms since
         <dl>
           <dt>Necessity of Naming</dt>
           <dd>
-            Indicates how necessity it is for authors to add a naming attribute or element to supplement or override the content of an element with the specified role.
+            Indicates how necessary it is for authors to add a naming attribute or element to supplement or override the content of an element with the specified role.
             This column may include one of the following values:
             <ul>
               <li>
