--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4303,7 +4303,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td><a href="#document" class="role-reference"><code>document</code></a></td>
               <td>Discretionary</td>
               <td>
-                Elements with the <code>document</code> role are contained within an element with the <code>application</code> element, which is required to have a name.
+                Elements with the <code>document</code> role are contained within an element with the <code>application</code> role, which is required to have a name.
                 Typically, the name of the <code>application</code> element will provide sufficient context and identity for the <code>document</code> element.
                 Because the <code>application</code> element is used only to create unusual, custom widgets, careful assessment is necessary to determine whether or not adding an accessible name is beneficial.
               </td>
