--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4201,6 +4201,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Necessary in the uncommon circumstance where two banner landmark regions are present on the same page. It is otherwise optional.</li>
                   <li>Named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_banner">Banner Landmark Role</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4266,6 +4267,7 @@ However, most authors do not need detailed understanding of the algorithms since
                   <li>Naming is necessary when two complementary landmark regions are present on the same page.</li>
                   <li>Naming is recommended even when one complementary region is present to help users understand the purpose of the region's content when navigating among landmark regions.</li>
                   <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_complementary">Complementary Landmark Role</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4337,7 +4339,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the form landmark.</li>
                   <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
-                  <li>See the <a href="#aria_lh_form">Form Design Pattern</a>.</li>
+                  <li>See the <a href="#aria_lh_form">Form Landmark Role</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4439,6 +4441,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Potentially helpful for orienting assistive technology users, especially in single-page applications where main content changes happen without generating a page load event.</li>
                   <li>Can be named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_main">Main Landmark Role</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4519,7 +4522,7 @@ However, most authors do not need detailed understanding of the algorithms since
                 <ul>
                   <li>Helps screen reader users understand the context and purpose of the navigation landmark.</li>
                   <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
-                  <li>See the <a href="#aria_lh_navigation">Navigation Design Pattern</a>.</li>
+                  <li>See the <a href="#aria_lh_navigation">Navigation Landmark Role</a>.</li>
                 </ul>
               </td>
             </tr>
@@ -4592,7 +4595,13 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#region" class="role-reference"><code>region</code></a></td>
               <td>Required</td>
-              <td>guidance</td>
+              <td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the landmark.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#aria_lh_region">Region Landmark Role</a>.</li>
+                </ul>
+            </td>
             </tr>
             <tr>
               <td><a href="#row" class="role-reference"><code>row</code></a></td>
@@ -4630,8 +4639,14 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#search" class="role-reference"><code>search</code></a></td>
-              <td>namerequired</td>
-              <td>guidance</td>
+              <td>Recommended</td>
+              <td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the search landmark.</li>
+                  <li>Named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code>.</li>
+                  <li>See the <a href="aria_lh_search">Search Landmark Role</a>.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#searchbox" class="role-reference"><code>searchbox</code></a></td>
