Recommendation for scrollbar

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4634,8 +4634,8 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#scrollbar" class="role-reference"><code>scrollbar</code></a></td>
-              <td>Required</td>
-              <td>guidance</td>
+              <td>Do Not Name</td>
+              <td>Use <code>aria-controls</code> to indicate which element the scrollbar controls.</td>
             </tr>
             <tr>
               <td><a href="#search" class="role-reference"><code>search</code></a></td>
