Recommendation for tablist

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4714,8 +4714,14 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#tablist" class="role-reference"><code>tablist</code></a></td>
-              <td>namerequired</td>
-              <td>guidance</td>
+              <td>Recommended</td>
+              <td>
+                <ul>
+                  <li>Helps screen reader users understand the context and purpose of the tablist.</li>
+                  <li>Use <code>aria-labelledby</code> if a visible title is present, otherwise use <code>aria-label</code>.</li>
+                  <li>See the <a href="#carousel">Carousel Design Pattenr</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#tabpanel" class="role-reference"><code>tabpanel</code></a></td>
