Recommendation for tabpanel

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4726,7 +4726,12 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#tabpanel" class="role-reference"><code>tabpanel</code></a></td>
               <td>Required</td>
-              <td>guidance</td>
+              <td>
+                <ul>
+                  <li>Use <code>aria-labelledby</code> pointing to the <code>tab</code> element that controls the <code>tabpanel</code>.</li>
+                  <li>See the <a href="#carousel">Carousel Design Pattenr</a> and <a href="#tabpanel">Tabs Design Pattern</a>.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#term" class="role-reference"><code>term</code></a></td>
