Recommendation for rowgroup (WIP)

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4618,8 +4618,8 @@ However, most authors do not need detailed understanding of the algorithms since
             </tr>
             <tr>
               <td><a href="#rowgroup" class="role-reference"><code>rowgroup</code></a></td>
-              <td>namerequired</td>
-              <td>guidance</td>
+              <td>Do Not Name</td>
+              <td>To-do: guidance</td>
             </tr>
             <tr>
               <td><a href="#rowheader" class="role-reference"><code>rowheader</code></a></td>
